# powertask

./: CMakeLists.txt  README.md
.github/workflows/: run_tests.yml
include/powertask/: energy.h  scheduler.h  storage.h
src/: energy.c  scheduler.c
tests/: CMakeLists.txt
tests/energy/: CMakeLists.txt
tests/energy/src/: energy.cpp
tests/scheduler/: CMakeLists.txt
tests/scheduler/src/: fake.h  mocks.cpp  scheduler.cpp
